--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
+    "dev:no-hmr": "next dev --no-hot-reload",
+    "dev:windows": "next dev --turbo",
+    "dev:safe": "next dev --no-hot-reload --port 3000",
+    "dev:win": "node dev-windows.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
